<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fondo"
    tools:context="com.example.playasarc.proyectoplayas.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameInputLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordInputLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registro"
            />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/sol"
            android:layout_width="111dp"
            android:layout_height="103dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@null"
            android:src="@drawable/sol"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="388dp" />

        <ImageView
            android:id="@+id/playa"
            android:layout_width="171dp"
            android:layout_height="165dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            android:src="@drawable/playa"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="388dp" />
    </FrameLayout>

</LinearLayout>


